# OTMTransformer

./: .gitignore  pyproject.toml
otm_transformer/: characConstants.py  llmClient.py  transformCpy.py
otm_transformer/model/: company.py
tests/: cpy_scrapper.csv  cpy_size_dic.csv  dic_charac.csv  dic_charac_value.csv  salary.csv  sub_sector_scrapper_dic.csv  sub_sectors.csv  test_generateRequest.py  test_sectors.py  test_transformCpy.py  test_wtj_to_otm.py
