[tool.poetry]
name = "otm-transformer"
version = "0.1.11"
description = ""
authors = ["lduchesne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pydantic = "^2.7.0"
openai = "^1.17.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
deltalake = "^0.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"